Adjusted code alignment

--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -3,20 +3,35 @@
     <table class="table">
       <thead class="thead-light">
       <tr>
-        <th scope="col">Name <dh-tip [text]="helpService.getDeviceNameTip()"></dh-tip></th>
-        <th scope="col">Network <dh-tip [text]="helpService.getDeviceNetworkTip()"></dh-tip></th>
-        <th scope="col">Device Type <dh-tip [text]="helpService.getDeviceDeviceTypeTip()"></dh-tip></th>
-        <th scope="col">Operation <dh-tip [text]="helpService.getDeviceOperationTip()"></dh-tip></th>
-        <th scope="col">Data <dh-tip [text]="helpService.getDeviceDataTip()"></dh-tip></th>
+        <th scope="col">Name
+          <dh-tip [text]="helpService.getDeviceNameTip()"></dh-tip>
+        </th>
+        <th scope="col">Network
+          <dh-tip [text]="helpService.getDeviceNetworkTip()"></dh-tip>
+        </th>
+        <th scope="col">Device Type
+          <dh-tip [text]="helpService.getDeviceDeviceTypeTip()"></dh-tip>
+        </th>
+        <th scope="col">Operation
+          <dh-tip [text]="helpService.getDeviceOperationTip()"></dh-tip>
+        </th>
+        <th scope="col">Data
+          <dh-tip [text]="helpService.getDeviceDataTip()"></dh-tip>
+        </th>
         <th scope="col" class="actions-column">Actions</th>
       </tr>
       </thead>
 
       <tbody>
       <tr *ngFor="let device of devices">
-        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="device.name">{{device.name}}</td>
-        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="findNetworkNameById(device.networkId)">{{findNetworkNameById(device.networkId)}}</td>
-        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="findDeviceTypeNameById(device.deviceTypeId)">{{findDeviceTypeNameById(device.deviceTypeId)}}</td>
+        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="device.name">{{device.name}}
+        </td>
+        <td class="text-truncate" placement="bottom" data-container="body"
+            [ngbTooltip]="findNetworkNameById(device.networkId)">{{findNetworkNameById(device.networkId)}}
+        </td>
+        <td class="text-truncate" placement="bottom" data-container="body"
+            [ngbTooltip]="findDeviceTypeNameById(device.deviceTypeId)">{{findDeviceTypeNameById(device.deviceTypeId)}}
+        </td>
         <td>{{device.isBlocked ? 'Blocked' : 'Normal'}}</td>
         <td>{{!!device.data ? (device.data | json) : null}}</td>
         <td>
@@ -30,12 +45,15 @@
 
   <button class="btn btn-success float-right btn-add"
           *ngIf="networks?.length !== 0 && deviceTypes?.length !== 0"
-          (click)="openNewDeviceModal(newDeviceModal)">Add new device</button>
+          (click)="openNewDeviceModal(newDeviceModal)">Add new device
+  </button>
 
-  <div  class="float-right" *ngIf="(networks && networks.length === 0) || (deviceTypes && deviceTypes.length === 0)"
+  <div class="float-right" *ngIf="(networks && networks.length === 0) || (deviceTypes && deviceTypes.length === 0)"
        placement="bottom" data-container="body"
-        [ngbTooltip]="'You should have at least one network and one device type available to create a new device. Please contact your administrator.'">
-    <button class="btn btn-success float-right btn-add" (click)="openNewDeviceModal(newDeviceModal)" disabled>Add new device</button>
+       [ngbTooltip]="'You should have at least one network and one device type available to create a new device. Please contact your administrator.'">
+    <button class="btn btn-success float-right btn-add" (click)="openNewDeviceModal(newDeviceModal)" disabled>Add new
+      device
+    </button>
   </div>
 
 </div>
