initial changes, added templates for modal window

--- a/src/app/admin/networks/networks.component.html
+++ b/src/app/admin/networks/networks.component.html
@@ -61,3 +61,21 @@
     <button type="button" class="btn btn-success" (click)="updateSelectedNetwork()">Save</button>
   </div>
 </ng-template>
+
+<ng-template #deleteNetworkModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Network</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Close')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body" *ngIf="selectedNetwork">
+    <dh-network [network]="selectedNetwork"></dh-network>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="updateSelectedNetwork()">Save</button>
+  </div>
+</ng-template>
