--- a/src/app/admin/devices/device/device.component.html
+++ b/src/app/admin/devices/device/device.component.html
@@ -44,6 +44,7 @@
       [resultTemplate]="rt"
       (ngModelChange)="selectDeviceType()"
       #deviceTypesTypeahead="ngbTypeahead"
+      style="width: 250px;"
     />
     <div class="input-group-append">
       <button class="btn btn-outline-secondary" type="button" (click)="clearSelectedDeviceType()">Clear</button>
