lint fixes and fixes for build

--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -59,8 +59,8 @@
       </tbody>
     </table>
     <ngb-pagination class="d-flex justify-content-center"
-                    [collectionSize]="itemsCount" [(page)]="page" [maxSize]="5" [rotate]="true" 
-                    [boundaryLinks]="true" (pageChange)="loadPage($event)">
+                    [collectionSize]="itemsCount" [(page)]="page" [maxSize]="5" [rotate]="true"
+                    [boundaryLinks]="true" (pageChange)="loadPage()">
     </ngb-pagination>
   </div>
 
