--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -28,7 +28,7 @@
     </table>
     <ngb-pagination class="d-flex justify-content-center"
                     [collectionSize]="itemsCount" [(page)]="page" [maxSize]="5" [rotate]="true"
-                    [boundaryLinks]="true" (pageChange)="loadPage($event)">
+                    [boundaryLinks]="true" (pageChange)="loadPage()">
     </ngb-pagination>
   </div>
 
